--- a/resources/lang/ar.json
+++ b/resources/lang/ar.json
@@ -330,7 +330,106 @@
     "Do you provide ongoing support after the project is completed?": "هل تقدمون دعمًا مستمرًا بعد اكتمال المشروع؟",
     "Yes, we offer ongoing support and maintenance services after the project is completed. We’re here to ensure everything runs smoothly and to address any issues that may arise.": "نعم، نقدم خدمات الدعم والصيانة المستمرة بعد اكتمال المشروع. نحن هنا لضمان سير كل شيء بسلاسة ومعالجة أي مشكلات قد تنشأ.",
     "Can I request a custom design or feature for my project?": "هل يمكنني طلب تصميم أو ميزة مخصصة لمشروعي؟",
-    "Absolutely! We specialize in creating custom designs and features tailored to your specific needs. Let us know what you have in mind, and we’ll work with you to bring your vision to life.": "بالتأكيد! نحن متخصصون في إنشاء تصميمات وميزات مخصصة تلبي احتياجاتك الخاصة. أخبرنا بما يدور في ذهنك وسنعمل معك لتحقيق رؤيتك."
+    "Absolutely! We specialize in creating custom designs and features tailored to your specific needs. Let us know what you have in mind, and we’ll work with you to bring your vision to life.": "بالتأكيد! نحن متخصصون في إنشاء تصميمات وميزات مخصصة تلبي احتياجاتك الخاصة. أخبرنا بما يدور في ذهنك وسنعمل معك لتحقيق رؤيتك.",
+     "Providers": "مقدمي الخدمات",
 
+    "Home": "الرئيسية",
+    "Provider Tools": "أدوات المزود",
+    "Gallery": "معرض الصور",
+    "F.A.Q": "الأسئلة الشائعة",
+    "Contact Us": "اتصل بنا",
+    "Get Started": "ابدأ الآن",
+    "Grow Your Business with Khadamati": "نمّي عملك مع خادماتي",
+    "Join thousands of service providers on the Khadamati Provider App. Showcase your skills, manage bookings, and connect with customers effortlessly. Download now to start growing!": "انضم إلى آلاف مزودي الخدمات على تطبيق خادماتي للمزودين. اعرض مهاراتك، وأدر حجوزاتك، وتواصل مع العملاء بسهولة. قم بالتحميل الآن لتبدأ في النمو!",
+    "Google Play": "متجر جوجل بلاي",
+    "App Store": "متجر التطبيقات",
+    "Huawei AppGallery": "معرض تطبيقات هواوي",
+    "Unlock powerful tools designed to help service providers succeed. From managing your services to reaching new customers, the Khadamati Provider App has you covered.": "افتح أدوات قوية مصممة لمساعدة مزودي الخدمات على النجاح. من إدارة خدماتك إلى الوصول إلى عملاء جدد، تطبيق خادماتي للمزودين يغطي احتياجاتك.",
+    "Service Management": "إدارة الخدمات",
+    "Easily create, edit, and manage your service listings with photos, pricing, and availability.": "أنشئ، حرر، وأدر قوائم خدماتك بسهولة مع الصور، التسعير، والتوافر.",
+    "Booking System": "نظام الحجز",
+    "Streamline appointments with an integrated booking system tailored to your schedule.": "تبسيط المواعيد مع نظام حجز مدمج مصمم حسب جدولك.",
+    "Customer Outreach": "التواصل مع العملاء",
+    "Reach a wider audience and attract new clients with targeted visibility.": "استهدف جمهورًا أوسع واجذب عملاء جدد مع رؤية موجهة.",
+    "Reputation Building": "بناء السمعة",
+    "Collect reviews and ratings to boost your credibility and attract more business.": "اجمع التقييمات والمراجعات لتعزيز مصداقيتك وجذب المزيد من الأعمال.",
+    "Performance Insights": "رؤى الأداء",
+    "Track your earnings, bookings, and customer interactions with detailed analytics.": "تتبع أرباحك، حجوزاتك، وتفاعلات العملاء مع تحليلات مفصلة.",
+    "Secure Payments": "مدفوعات آمنة",
+    "Receive payments quickly and securely directly through the app.": "استلم المدفوعات بسرعة وأمان مباشرة عبر التطبيق.",
+    "Manage Your Services Effortlessly": "أدر خدماتك بسهولة",
+    "The Khadamati Provider App simplifies how you list and manage your services, helping you stay organized and efficient.": "تطبيق خادماتي للمزودين يبسط كيفية سرد وإدارة خدماتك، مما يساعدك على البقاء منظمًا وفعالًا.",
+    "Add photos, descriptions, and pricing in minutes.": "أضف الصور، الأوصاف، والتسعير في دقائق.",
+    "Update availability and details on the go.": "حدث التوافر والتفاصيل أثناء التنقل.",
+    "Manage multiple services from one dashboard.": "أدر خدمات متعددة من لوحة تحكم واحدة.",
+    "Showcase your work to thousands of potential clients.": "اعرض عملك لآلاف العملاء المحتملين.",
+    "Whether you’re a freelancer or a small business, our tools help you stay in control and grow your reach.": "سواء كنت مستقلاً أو شركة صغيرة، أدواتنا تساعدك على البقاء في السيطرة وتوسيع نطاق وصولك.",
+    "Reach More Customers": "الوصول إلى المزيد من العملاء",
+    "Expand your client base with tools designed to increase your visibility and attract business.": "وسع قاعدة عملائك بأدوات مصممة لزيادة رؤيتك وجذب الأعمال.",
+    "Get discovered by customers searching for your services. Promote your offerings and connect with clients in your area.": "تم اكتشافك من قبل العملاء الذين يبحثون عن خدماتك. روّج لعروضك وتواصل مع العملاء في منطقتك.",
+    "With Khadamati, your services are just a tap away from thousands of potential customers.": "مع خادماتي، خدماتك على بعد نقرة واحدة من آلاف العملاء المحتملين.",
+    "Communicate with Ease": "تواصل بسهولة",
+    "Stay connected with your clients through our built-in communication tools designed for providers.": "ابق على اتصال مع عملائك من خلال أدوات التواصل المدمجة المصممة للمزودين.",
+    "Chat directly with customers within the app.": "تحدث مباشرة مع العملاء داخل التطبيق.",
+    "Get notified about new inquiries and bookings.": "تلقَ إشعارات حول الاستفسارات والحجوزات الجديدة.",
+    "Respond quickly with a user-friendly interface.": "رد بسرعة بواجهة سهلة الاستخدام.",
+    "Efficient communication means happier clients and more repeat business.": "التواصل الفعال يعني عملاء أكثر سعادة وأعمال متكررة أكثر.",
+    "A Platform You Can Trust": "منصة يمكنك الوثوق بها",
+    "Khadamati is built to support providers with a reliable and secure experience.": "تم بناء خادماتي لدعم المزودين بتجربة موثوقة وآمنة.",
+    "From payments to performance tracking, our app ensures you have everything you need to succeed.": "من المدفوعات إلى تتبع الأداء، تطبيقنا يضمن لك كل ما تحتاجه للنجاح.",
+    "Secure payment processing for your earnings.": "معالجة دفع آمنة لأرباحك.",
+    "Regular app updates for a smooth experience.": "تحديثات منتظمة للتطبيق لتجربة سلسة.",
+    "Dedicated support to help you succeed.": "دعم مخصص لمساعدتك على النجاح.",
+    "See how providers like you are thriving on Khadamati. From service showcases to success stories, our gallery highlights the opportunities waiting for you.": "شاهد كيف يزدهر مزودون مثلك على خادماتي. من عروض الخدمات إلى قصص النجاح، معرضنا يبرز الفرص التي تنتظرك.",
+    "Provider Testimonials": "شهادات المزودين",
+    "Hear from service providers who have transformed their businesses with Khadamati. Their success stories are a testament to our platform’s impact.": "استمع إلى مزودي الخدمات الذين حولوا أعمالهم مع خادماتي. قصص نجاحهم شهادة على تأثير منصتنا.",
+    "Ahmed Al-Hussein": "أحمد الحسين",
+    "Plumber": "سباك",
+    "Khadamati helped me double my bookings in just a few months. The app is easy to use, and the support is amazing!": "ساعدني خادماتي على مضاعفة حجوزاتي في بضعة أشهر فقط. التطبيق سهل الاستخدام، والدعم رائع!",
+    "Fatima Al-Sayed": "فاطمة السيد",
+    "Graphic Designer": "مصممة جرافيك",
+    "This app made it so simple to showcase my work and connect with clients. My business has grown faster than ever.": "جعل هذا التطبيق عرض عملي والاتصال بالعملاء أمرًا بسيطًا للغاية. نمت أعمالي أسرع من أي وقت مضى.",
+    "Omar Al-Farsi": "عمر الفارسي",
+    "Electrician": "كهربائي",
+    "The booking system and payment tools are a game-changer. I can focus on my work while Khadamati handles the rest.": "نظام الحجز وأدوات الدفع هما تغيير جذري. يمكنني التركيز على عملي بينما يتولى خادماتي الباقي.",
+    "Frequently Asked Questions": "الأسئلة الشائعة",
+    "Got questions about becoming a provider? Here are answers to some common queries. Contact us if you need more help!": "هل لديك أسئلة حول أن تصبح مزودًا؟ إليك إجابات لبعض الاستفسارات الشائعة. تواصل معنا إذا كنت بحاجة إلى مزيد من المساعدة!",
+    "How do I get started as a provider?": "كيف أبدأ كمزود؟",
+    "Download the app, create a provider profile, and start adding your services. It’s quick and easy to set up!": "قم بتحميل التطبيق، أنشئ ملفًا شخصيًا للمزود، وابدأ في إضافة خدماتك. إنه سريع وسهل الإعداد!",
+    "Is there a fee to join as a provider?": "هل هناك رسوم للانضمام كمزود؟",
+    "Joining is free! We may charge a small commission on bookings, but there are no upfront costs to get started.": "الانضمام مجاني! قد نفرض عمولة صغيرة على الحجوزات، لكن لا توجد تكاليف مقدمة للبدء.",
+    "How do I receive payments?": "كيف أستلم المدفوعات؟",
+    "Payments are processed securely through the app and transferred to your preferred account after each job.": "تتم معالجة المدفوعات بأمان عبر التطبيق وتحويلها إلى حسابك المفضل بعد كل وظيفة.",
+    "We’re here to support providers in Amman, Jordan, and beyond. Reach out with any questions or assistance you need!": "نحن هنا لدعم المزودين في عمان، الأردن، وما وراء ذلك. تواصل معنا لأي أسئلة أو مساعدة تحتاجها!",
+    "Our Office": "مكتبنا",
+    "Location:": "الموقع:",
+    "Amman, Jordan": "عمان، الأردن",
+    "Phone:": "الهاتف:",
+    "Email:": "البريد الإلكتروني:",
+    "Working Hours:": "ساعات العمل:",
+    "Sunday - Thursday, 9:00 AM - 5:00 PM": "الأحد - الخميس، 9:00 صباحًا - 5:00 مساءً",
+    "Drop by or contact us—we’re excited to help you succeed as a provider!": "تفضل بزيارتنا أو تواصل معنا—نحن متحمسون لمساعدتك على النجاح كمزود!",
+    "Your Email": "بريدك الإلكتروني",
+    "Subject": "الموضوع",
+    "Message": "الرسالة",
+    "Please enter a valid email": "يرجى إدخال بريد إلكتروني صالح",
+    "Please enter at least 4 chars of subject": "يرجى إدخال 4 أحرف على الأقل للموضوع",
+    "Please write something for us": "يرجى كتابة شيء لنا",
+    "Send Message": "إرسال الرسالة",
+    "Join Our Newsletter": "انضم إلى نشرتنا الإخبارية",
+    "Get the latest tips, updates, and opportunities for providers straight to your inbox.": "احصل على أحدث النصائح، التحديثات، والفرص للمزودين مباشرة في بريدك الإلكتروني.",
+    "Enter your email": "أدخل بريدك الإلكتروني",
+    "Subscribe": "اشترك",
+    "Khadamati Provider": "خادماتي للمزودين",
+    "123 Main Street, Tabarbur": "123 شارع الرئيسي، طبربور",
+    "Amman, Jordan 11118": "عمان، الأردن 11118",
+    "Jordan": "الأردن",
+    "Useful Links": "روابط مفيدة",
+    "Our Social Networks": "شبكاتنا الاجتماعية",
+    "Stay connected with us for provider tips and updates!": "ابق على اتصال معنا للحصول على نصائح وتحديثات للمزودين!",
+    "Copyright": "حقوق الطبع والنشر",
+    "All Rights Reserved.": "جميع الحقوق محفوظة.",
+    "Thank you for subscribing to our newsletter! You will now receive the latest updates directly in your inbox.": "شكرًا لاشتراكك في نشرتنا الإخبارية! ستتلقى الآن أحدث التحديثات مباشرة في بريدك الإلكتروني.",
+    "Thank you for contacting us! Our team will respond promptly.": "شكرًا لتواصلك معنا! سيقوم فريقنا بالرد بسرعة."
 
 }
