--- a/resources/lang/ar.json
+++ b/resources/lang/ar.json
@@ -339,12 +339,12 @@
     "F.A.Q": "الأسئلة الشائعة",
     "Contact Us": "اتصل بنا",
     "Get Started": "ابدأ الآن",
-    "Grow Your Business with Khadamati": "نمّي عملك مع خادماتي",
-    "Join thousands of service providers on the Khadamati Provider App. Showcase your skills, manage bookings, and connect with customers effortlessly. Download now to start growing!": "انضم إلى آلاف مزودي الخدمات على تطبيق خادماتي للمزودين. اعرض مهاراتك، وأدر حجوزاتك، وتواصل مع العملاء بسهولة. قم بالتحميل الآن لتبدأ في النمو!",
+    "Grow Your Business with Khadamati": "نمّي عملك مع خدماتي بلس",
+    "Join thousands of service providers on the Khadamati Provider App. Showcase your skills, manage bookings, and connect with customers effortlessly. Download now to start growing!": "انضم إلى آلاف مزودي الخدمات على تطبيق خدماتي بلس للمزودين. اعرض مهاراتك، وأدر حجوزاتك، وتواصل مع العملاء بسهولة. قم بالتحميل الآن لتبدأ في النمو!",
     "Google Play": "متجر جوجل بلاي",
     "App Store": "متجر التطبيقات",
     "Huawei AppGallery": "معرض تطبيقات هواوي",
-    "Unlock powerful tools designed to help service providers succeed. From managing your services to reaching new customers, the Khadamati Provider App has you covered.": "افتح أدوات قوية مصممة لمساعدة مزودي الخدمات على النجاح. من إدارة خدماتك إلى الوصول إلى عملاء جدد، تطبيق خادماتي للمزودين يغطي احتياجاتك.",
+    "Unlock powerful tools designed to help service providers succeed. From managing your services to reaching new customers, the Khadamati Provider App has you covered.": "افتح أدوات قوية مصممة لمساعدة مزودي الخدمات على النجاح. من إدارة خدماتك إلى الوصول إلى عملاء جدد، تطبيق خدماتي بلس للمزودين يغطي احتياجاتك.",
     "Service Management": "إدارة الخدمات",
     "Easily create, edit, and manage your service listings with photos, pricing, and availability.": "أنشئ، حرر، وأدر قوائم خدماتك بسهولة مع الصور، التسعير، والتوافر.",
     "Booking System": "نظام الحجز",
@@ -358,7 +358,7 @@
     "Secure Payments": "مدفوعات آمنة",
     "Receive payments quickly and securely directly through the app.": "استلم المدفوعات بسرعة وأمان مباشرة عبر التطبيق.",
     "Manage Your Services Effortlessly": "أدر خدماتك بسهولة",
-    "The Khadamati Provider App simplifies how you list and manage your services, helping you stay organized and efficient.": "تطبيق خادماتي للمزودين يبسط كيفية سرد وإدارة خدماتك، مما يساعدك على البقاء منظمًا وفعالًا.",
+    "The Khadamati Provider App simplifies how you list and manage your services, helping you stay organized and efficient.": "تطبيق خدماتي بلس للمزودين يبسط كيفية سرد وإدارة خدماتك، مما يساعدك على البقاء منظمًا وفعالًا.",
     "Add photos, descriptions, and pricing in minutes.": "أضف الصور، الأوصاف، والتسعير في دقائق.",
     "Update availability and details on the go.": "حدث التوافر والتفاصيل أثناء التنقل.",
     "Manage multiple services from one dashboard.": "أدر خدمات متعددة من لوحة تحكم واحدة.",
@@ -367,7 +367,7 @@
     "Reach More Customers": "الوصول إلى المزيد من العملاء",
     "Expand your client base with tools designed to increase your visibility and attract business.": "وسع قاعدة عملائك بأدوات مصممة لزيادة رؤيتك وجذب الأعمال.",
     "Get discovered by customers searching for your services. Promote your offerings and connect with clients in your area.": "تم اكتشافك من قبل العملاء الذين يبحثون عن خدماتك. روّج لعروضك وتواصل مع العملاء في منطقتك.",
-    "With Khadamati, your services are just a tap away from thousands of potential customers.": "مع خادماتي، خدماتك على بعد نقرة واحدة من آلاف العملاء المحتملين.",
+    "With Khadamati, your services are just a tap away from thousands of potential customers.": "مع خدماتي بلس، خدماتك على بعد نقرة واحدة من آلاف العملاء المحتملين.",
     "Communicate with Ease": "تواصل بسهولة",
     "Stay connected with your clients through our built-in communication tools designed for providers.": "ابق على اتصال مع عملائك من خلال أدوات التواصل المدمجة المصممة للمزودين.",
     "Chat directly with customers within the app.": "تحدث مباشرة مع العملاء داخل التطبيق.",
@@ -375,23 +375,23 @@
     "Respond quickly with a user-friendly interface.": "رد بسرعة بواجهة سهلة الاستخدام.",
     "Efficient communication means happier clients and more repeat business.": "التواصل الفعال يعني عملاء أكثر سعادة وأعمال متكررة أكثر.",
     "A Platform You Can Trust": "منصة يمكنك الوثوق بها",
-    "Khadamati is built to support providers with a reliable and secure experience.": "تم بناء خادماتي لدعم المزودين بتجربة موثوقة وآمنة.",
+    "Khadamati is built to support providers with a reliable and secure experience.": "تم بناء خدماتي بلس لدعم المزودين بتجربة موثوقة وآمنة.",
     "From payments to performance tracking, our app ensures you have everything you need to succeed.": "من المدفوعات إلى تتبع الأداء، تطبيقنا يضمن لك كل ما تحتاجه للنجاح.",
     "Secure payment processing for your earnings.": "معالجة دفع آمنة لأرباحك.",
     "Regular app updates for a smooth experience.": "تحديثات منتظمة للتطبيق لتجربة سلسة.",
     "Dedicated support to help you succeed.": "دعم مخصص لمساعدتك على النجاح.",
-    "See how providers like you are thriving on Khadamati. From service showcases to success stories, our gallery highlights the opportunities waiting for you.": "شاهد كيف يزدهر مزودون مثلك على خادماتي. من عروض الخدمات إلى قصص النجاح، معرضنا يبرز الفرص التي تنتظرك.",
+    "See how providers like you are thriving on Khadamati. From service showcases to success stories, our gallery highlights the opportunities waiting for you.": "شاهد كيف يزدهر مزودون مثلك على خدماتي بلس. من عروض الخدمات إلى قصص النجاح، معرضنا يبرز الفرص التي تنتظرك.",
     "Provider Testimonials": "شهادات المزودين",
-    "Hear from service providers who have transformed their businesses with Khadamati. Their success stories are a testament to our platform’s impact.": "استمع إلى مزودي الخدمات الذين حولوا أعمالهم مع خادماتي. قصص نجاحهم شهادة على تأثير منصتنا.",
+    "Hear from service providers who have transformed their businesses with Khadamati. Their success stories are a testament to our platform’s impact.": "استمع إلى مزودي الخدمات الذين حولوا أعمالهم مع خدماتي بلس. قصص نجاحهم شهادة على تأثير منصتنا.",
     "Ahmed Al-Hussein": "أحمد الحسين",
     "Plumber": "سباك",
-    "Khadamati helped me double my bookings in just a few months. The app is easy to use, and the support is amazing!": "ساعدني خادماتي على مضاعفة حجوزاتي في بضعة أشهر فقط. التطبيق سهل الاستخدام، والدعم رائع!",
+    "Khadamati helped me double my bookings in just a few months. The app is easy to use, and the support is amazing!": "ساعدني خدماتي بلس على مضاعفة حجوزاتي في بضعة أشهر فقط. التطبيق سهل الاستخدام، والدعم رائع!",
     "Fatima Al-Sayed": "فاطمة السيد",
     "Graphic Designer": "مصممة جرافيك",
     "This app made it so simple to showcase my work and connect with clients. My business has grown faster than ever.": "جعل هذا التطبيق عرض عملي والاتصال بالعملاء أمرًا بسيطًا للغاية. نمت أعمالي أسرع من أي وقت مضى.",
     "Omar Al-Farsi": "عمر الفارسي",
     "Electrician": "كهربائي",
-    "The booking system and payment tools are a game-changer. I can focus on my work while Khadamati handles the rest.": "نظام الحجز وأدوات الدفع هما تغيير جذري. يمكنني التركيز على عملي بينما يتولى خادماتي الباقي.",
+    "The booking system and payment tools are a game-changer. I can focus on my work while Khadamati handles the rest.": "نظام الحجز وأدوات الدفع هما تغيير جذري. يمكنني التركيز على عملي بينما يتولى خدماتي بلس الباقي.",
     "Frequently Asked Questions": "الأسئلة الشائعة",
     "Got questions about becoming a provider? Here are answers to some common queries. Contact us if you need more help!": "هل لديك أسئلة حول أن تصبح مزودًا؟ إليك إجابات لبعض الاستفسارات الشائعة. تواصل معنا إذا كنت بحاجة إلى مزيد من المساعدة!",
     "How do I get started as a provider?": "كيف أبدأ كمزود؟",
@@ -420,7 +420,7 @@
     "Get the latest tips, updates, and opportunities for providers straight to your inbox.": "احصل على أحدث النصائح، التحديثات، والفرص للمزودين مباشرة في بريدك الإلكتروني.",
     "Enter your email": "أدخل بريدك الإلكتروني",
     "Subscribe": "اشترك",
-    "Khadamati Provider": "خادماتي للمزودين",
+    "Khadamati Provider": "خدماتي بلس للمزودين",
     "123 Main Street, Tabarbur": "123 شارع الرئيسي، طبربور",
     "Amman, Jordan 11118": "عمان، الأردن 11118",
     "Jordan": "الأردن",
