--- a/resources/lang/ar.json
+++ b/resources/lang/ar.json
@@ -430,6 +430,9 @@
     "Copyright": "حقوق الطبع والنشر",
     "All Rights Reserved.": "جميع الحقوق محفوظة.",
     "Thank you for subscribing to our newsletter! You will now receive the latest updates directly in your inbox.": "شكرًا لاشتراكك في نشرتنا الإخبارية! ستتلقى الآن أحدث التحديثات مباشرة في بريدك الإلكتروني.",
-    "Thank you for contacting us! Our team will respond promptly.": "شكرًا لتواصلك معنا! سيقوم فريقنا بالرد بسرعة."
+    "Thank you for contacting us! Our team will respond promptly.": "شكرًا لتواصلك معنا! سيقوم فريقنا بالرد بسرعة.",
+    "Learn How to Register": "شاهد كيفية التسجيل",
+    "How to Register on Khadamati": "كيفية التسجيل في خدمة خداماتي بلس",
+    "Close": "إغلاق"
 
 }
